[tool.poetry]
name = "youtube-crud"
version = "0.1.0"
description = "A basic Youtube CRUD operations package using YouTube API"
authors = ["Souvik Sen <souviksen520@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
